# GenCertQuiz

./: .gitignore  README.md  docker-compose.yml  dump.sql
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
backend/models/: schemas.py
backend/services/: __init__.py  embedder.py  hybrid_retriever.py  pdf_exporter.py  pdf_parser.py  rag_engine.py  style_analyzer.py  topic_extractor.py  vision.py
backend/services/agents/: __init__.py  base_agent.py  critic.py  psychometrician.py  researcher.py
backend/test-data/: README.md
frontend/: Dockerfile
frontend/app/: page.tsx
frontend/app/upload/: page.tsx
migrations/: 001_init.sql  002_add_topics_table.sql  002_hybrid_search.sql
