[project]
name = "gencertquiz-backend"
version = "0.1.0"
description = "RAG-powered certification quiz generator backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.2.4",
    "openai>=2.0.0",

    "pymupdf>=1.23.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "reportlab>=4.0.9",
    "tiktoken>=0.6.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
